feat: add duplicate course code check in CourseService, update integration tests, and disable smoke tests